syntax = "proto3";

package product;

option go_package = "github.com/mrezayusufy/shop-api/pkg/proto/product";

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 stock = 5;
}

service ProductService {
  rpc GetProduct(GetProductRequest) returns (ProductResponse);
  rpc CreateProduct(CreateProductRequest) returns (ProductResponse);
  rpc GetProducts(GetProductsRequest) returns (GetProductsResponse);
  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);
}


message GetProductRequest {
  string id = 1;
}

message CreateProductRequest {
  string name = 1;
  string description = 2;
  double price = 3;
  int32 stock = 4;
}

message GetProductsRequest {
  repeated string ids = 1;
}

message ListProductsRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message ProductResponse {
  Product product = 1;
}

message GetProductsResponse {
  repeated ProductResponse products = 1;
}

message ListProductsResponse {
  repeated ProductResponse products = 1;
  int32 total = 2;
}